fix(Report): hide unnecessary scroll bars on IE 11
related to OPT-1272

--- a/client/src/modules/components/Table/Table.scss
+++ b/client/src/modules/components/Table/Table.scss
@@ -25,6 +25,11 @@
 
   .rt-table {
     min-height: 0;
+    -ms-overflow-style: -ms-autohiding-scrollbar; /* IE FIX */
+  }
+
+  .rt-tbody {
+    padding-bottom: 15px; /* IE FIX */
   }
 
   .rt-noData {
